# iluvattnshun

./: .gitignore  .gitmodules  CLAUDE.md  README.html  README.md  data  debug_tensorboard.py  extract_data.py  extracted_data.json  plot_data.py  plot_results.py  pyproject.toml  setup.py
.claude/: settings.json
examples/: README.md  arc_agi_1.py  dag.py  launch_var_rename_sweep.sh  mnist.py  mnist_tbptt.py  shakespeare.py  var_eval.py  var_rename.py  var_rename_visualize.ipynb  var_rename_weight_share.py
examples/gpt_oss/: README.md  attention.py  config.py  load_weights.py  model.py  moe.py  shakespeare.py  test_generation.py  test_generation_cached.py  test_generation_offloaded.py  test_inference.py  test_model.py  test_train_setup.py  train_shakespeare.py  wrapper.py
examples/gpt_oss/model/: model.py  model_kv_cached.py  model_offloaded.py
examples/var_rename/: investigate.ipynb  report.md
examples/var_rename/configs/: l5h2_config.yaml
iluvattnshun/: logger.py  nn.py  prompter.py  requirements.txt  trainer.py  types.py  utils.py  viz.py
iluvattnshun/data/: var_rename.py
