[project]
name = "iluvattnshun"
version = "0.0.1"
description = "A PyTorch-based framework for running quick attention-based experiments"
requires-python = ">=3.10,<3.13"
dependencies = [
    "colorama>=0.4.6",
    "numpy>=1.24.0",
    "tensorboard>=2.18.0",
    "tensorflow>=2.18.0",
    # Note: torch is intentionally not listed here
    # Install separately with CUDA support (see README.md)
]

[tool.mypy]
strict = true
disallow_untyped_calls = false
exclude = ["scratch/.*"]

[[tool.mypy.overrides]]
module = ["datasets"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["colorama"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["setuptools"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["tensorflow"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["tensorflow_datasets"]
ignore_missing_imports = true

[tool.black]
line-length = 120

[dependency-groups]
dev = [
    "mypy>=1.19.1",
]

